# thesis

./: .gitignore  frontmatter.tex  header.tex  mybib.bib  preamble.tex  requirements.txt  these.bst  thesis.tex  tmp.tex  ucsd.cls  unicodeInkscape.txt
KFnotes/: kf.tex  mybib.bib
LyapunovNotes/: lyapunovVariables.tex  modelBasedControl.tex  mybib.bib  plotSinCos.py  preamble.tex
chapters/: acronyms.tex  background.tex  chAcronyms.tex  chBackground.tex  chConclusion.tex  chControls.tex  chEstimation.tex  chFutureWork.tex  chIntroduction.tex  chResults.tex  chSourceCode.tex  conclusion.tex  controls.tex  estimation.tex  futureWork.tex  introduction.tex  results.tex  sourceCode.tex
code/: controlsPlot.py  controls_plot.py  findEigsLyapunov.py  find_eigs_lyapunov.py  plotSinCos.py  plot_sin_cos.py  timeResponse.py  time_response.py
code/qr/: CMakeLists.txt  Makefile  metrics.cc  qr.cc  qr.h
code/qr/include/: qr.h
code/qr/src/: qr.cpp
images/: 20100918_1717_velocities.png.REMOVED.git-id  20100918_1717_velocities.svg.REMOVED.git-id  20100920_1705_pid_velocities.png.REMOVED.git-id  20100929_1448_GE_KF.jpg.REMOVED.git-id  20100929_1448_pbtx.png.REMOVED.git-id  20100929_1448_pbtx.svg.REMOVED.git-id  GEHeadingReverse.jpg.REMOVED.git-id  GEHeadingReverse2.png.REMOVED.git-id  GEHeadingReverseFixed.jpg.REMOVED.git-id  KFDataHeadingReverse.png.REMOVED.git-id  KFDataHeadingReverse.svg.REMOVED.git-id  KFDataHeadingReverseFixed.png.REMOVED.git-id  KFDataHeadingReverseFixed.svg.REMOVED.git-id  KFLinearization.png.REMOVED.git-id  KFLinearization2.png.REMOVED.git-id  (+31 more)
(+96 files in other folders)
